Fixed header z-index

--- a/assets/style.css
+++ b/assets/style.css
@@ -95,6 +95,7 @@ a.text-gradient:hover {
 /* header */
 header {
     background: var(--background-dark-80);
+    z-index: 990;
 }
 
 header hr {
@@ -166,7 +167,6 @@ main {
 
 /* Introduction Section */
 main section:first-child .image div {
-    z-index: -1;
     background: linear-gradient(135deg, var(--gradient-blue), var(--gradient-purple));
 }
 
@@ -206,7 +206,6 @@ main section:first-child .intro div svg:not(:hover) rect {
 /* Contact Section */
 #contactSection {
     position: relative;
-    z-index: -1;
 }
 
 #contactSection::before, #contactSection::after {
